Added OpenAiEndpoint Logger | Code Restructuring (#167)
* Code Restructuring | Fixing Memory Leakage | Added OpenAIEndpoint Logging

* Code Restructuring | Fixing Memory Leakage | Added OpenAIEndpoint Logging

* Fixing Issues