@@ -6,14 +6,9 @@ import static com.edgechain.lib.constants.EndpointConstants.OPENAI_EMBEDDINGS_AP
 import com.edgechain.lib.chains.RedisRetrieval;
 import com.edgechain.lib.chains.Retrieval;
 import com.edgechain.lib.chunk.enums.LangType;
-import com.edgechain.lib.configuration.domain.CorsEnableOrigins;
-import com.edgechain.lib.configuration.domain.ExcludeMappingFilter;
-import com.edgechain.lib.configuration.domain.RedisEnv;
 import com.edgechain.lib.context.domain.HistoryContext;
 import com.edgechain.lib.embeddings.WordEmbeddings;
-import com.edgechain.lib.endpoint.impl.OpenAiEndpoint;
-import com.edgechain.lib.endpoint.impl.RedisEndpoint;
-import com.edgechain.lib.endpoint.impl.RedisHistoryContextEndpoint;
+import com.edgechain.lib.endpoint.impl.*;
 import com.edgechain.lib.index.enums.RedisDistanceMetric;
 import com.edgechain.lib.jsonnet.JsonnetArgs;
 import com.edgechain.lib.jsonnet.JsonnetLoader;
@@ -37,106 +32,94 @@ import org.json.JSONObject;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Primary;
+import org.springframework.boot.builder.SpringApplicationBuilder;
 import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
 
 @SpringBootApplication
 public class RedisExample {
 
-  private final String OPENAI_AUTH_KEY = "";
+  private final static String OPENAI_AUTH_KEY = "";
+
+  private static OpenAiEndpoint ada002Embedding;
+  private static OpenAiEndpoint gpt3Endpoint;
+  private static RedisEndpoint redisEndpoint;
+  private static RedisHistoryContextEndpoint contextEndpoint;
+
+  private JsonnetLoader queryLoader =
+          new FileJsonnetLoader("R:\\Github\\redis-query.jsonnet");
+  private JsonnetLoader chatLoader = new FileJsonnetLoader("R:\\Github\\redis-chat.jsonnet");
 
   public static void main(String[] args) {
     System.setProperty("server.port", "8080");
-    SpringApplication.run(RedisExample.class, args);
+
+    Properties properties = new Properties();
+
+    properties.setProperty("spring.jpa.show-sql", "true");
+    properties.setProperty("spring.jpa.properties.hibernate.format_sql", "true");
+
+    //Adding Cors ==> You can configure multiple cors w.r.t your urls.;
+    properties.setProperty("cors.origins", "http://localhost:4200");
+
+    // If you want to use PostgreSQL only; then just provide dbHost, dbUsername & dbPassword.
+    // If you haven't specified PostgreSQL, then logs won't be stored.
+    properties.setProperty("postgres.db.host", "");
+    properties.setProperty("postgres.db.username", "");
+    properties.setProperty("postgres.db.password", "");
+
+    // Redis Configuration
+    properties.setProperty("redis.url", "");
+    properties.setProperty("redis.port","12285");
+    properties.setProperty("redis.username", "default");
+    properties.setProperty("redis.password", "");
+    properties.setProperty("redis.ttl", "3600");
+
+    new SpringApplicationBuilder(RedisExample.class).properties(properties).run(args);
+
+    // Variables Initialization ==> Endpoints must be intialized in main method...
+    ada002Embedding = new OpenAiEndpoint(
+            OPENAI_EMBEDDINGS_API,
+            OPENAI_AUTH_KEY,
+            "text-embedding-ada-002",
+            new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
+
+    gpt3Endpoint = new OpenAiEndpoint(
+            OPENAI_CHAT_COMPLETION_API,
+            OPENAI_AUTH_KEY,
+            "gpt-3.5-turbo",
+            "user",
+            0.7,
+            new ExponentialDelay(3, 5, 2, TimeUnit.SECONDS));
+
+    redisEndpoint = new RedisEndpoint(new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
+    contextEndpoint = new RedisHistoryContextEndpoint(new ExponentialDelay(2, 2, 2, TimeUnit.SECONDS));
   }
 
-  // Adding Cors ==> You can configure multiple cors w.r.t your urls.;
-  @Bean
-  @Primary
-  public CorsEnableOrigins corsEnableOrigins() {
-    CorsEnableOrigins origins = new CorsEnableOrigins();
-    origins.setOrigins(Arrays.asList("http://localhost:4200", "http://localhost:4201"));
-    return origins;
-  }
+    /** By Default, every API is unauthenticated & exposed without any sort of authentication;
+     * To authenticate, your custom APIs in Controller you would need @PreAuthorize(hasAuthority("")); this will authenticate by JWT having two fields: a) email, b) role
+     * To authenticate, internal APIs related to historyContext & Logging, Delete Redis/Postgres
+     *                           we need to create bean of AuthFilter; you can uncomment the code.
+     * Note, you need to define "jwt.secret" property as well to decode accessToken.
+     */
+//  @Bean
+//  @Primary
+//  public AuthFilter authFilter() {
+//    AuthFilter filter = new AuthFilter();
+//    // new MethodAuthentication(List.of(APIs), roles)
+//    filter.setRequestPost(new MethodAuthentication(List.of("/v1/postgresql/historycontext"), "authenticated")); // define multiple roles by comma
+//    filter.setRequestGet(new MethodAuthentication(List.of(""), ""));
+//    filter.setRequestDelete(new MethodAuthentication(List.of(""), ""));
+//    filter.setRequestPatch(new MethodAuthentication(List.of(""), ""));
+//    filter.setRequestPut(new MethodAuthentication(List.of(""), ""));
+//    return filter;
+//  }
 
-  /* Optional (not required if you are not using Redis), always create bean with @Primary annotation */
-  @Bean
-  @Primary
-  public RedisEnv redisEnv() {
-    RedisEnv redisEnv = new RedisEnv();
-    redisEnv.setUrl("");
-    redisEnv.setPort(12285);
-    redisEnv.setUsername("default");
-    redisEnv.setPassword("");
-    redisEnv.setTtl(3600); // Configuring ttl for HistoryContext;
-    return redisEnv;
-  }
-
-  /**
-   * Optional, Create it to exclude api calls from filtering; otherwise API calls will filter via
-   * ROLE_BASE access *
-   */
-  @Bean
-  @Primary
-  public ExcludeMappingFilter mappingFilter() {
-    ExcludeMappingFilter mappingFilter = new ExcludeMappingFilter();
-    mappingFilter.setRequestPost(List.of("/v1/examples/**"));
-    mappingFilter.setRequestGet(List.of("/v1/examples/**"));
-    mappingFilter.setRequestDelete(List.of("/v1/examples/**"));
-    mappingFilter.setRequestPut(List.of("/v1/examples/**"));
-    return mappingFilter;
-  }
 
   @RestController
   @RequestMapping("/v1/examples")
   public class RedisController {
 
     @Autowired private PdfReader pdfReader;
-
-    /*** Creating HistoryContext (Using Redis)  ****/
-    @PostMapping("/redis/historycontext")
-    public ArkResponse createRedisHistoryContext(ArkRequest arkRequest) {
-
-      RedisHistoryContextEndpoint endpoint =
-          new RedisHistoryContextEndpoint(new FixedDelay(2, 3, TimeUnit.SECONDS));
-
-      return new ArkResponse(
-          endpoint.create(
-              UUID.randomUUID()
-                  .toString())); // Here randomId is generated, you can provide your own ids....
-    }
-
-    @PutMapping("/redis/historycontext")
-    public ArkResponse putRedisHistoryContext(ArkRequest arkRequest) throws IOException {
-      JSONObject json = arkRequest.getBody();
-
-      RedisHistoryContextEndpoint endpoint =
-          new RedisHistoryContextEndpoint(new FixedDelay(2, 3, TimeUnit.SECONDS));
-
-      return new ArkResponse(endpoint.put(json.getString("id"), json.getString("response")));
-    }
-
-    @GetMapping("/redis/historycontext")
-    public ArkResponse getRedisHistoryContext(ArkRequest arkRequest) {
-      String id = arkRequest.getQueryParam("id");
-
-      RedisHistoryContextEndpoint endpoint =
-          new RedisHistoryContextEndpoint(new FixedDelay(2, 3, TimeUnit.SECONDS));
-
-      return new ArkResponse(endpoint.get(id));
-    }
-
-    @DeleteMapping("/redis/historycontext")
-    public void deleteRedisHistoryContext(ArkRequest arkRequest) {
-      String id = arkRequest.getQueryParam("id");
-
-      RedisHistoryContextEndpoint endpoint =
-          new RedisHistoryContextEndpoint(new FixedDelay(2, 3, TimeUnit.SECONDS));
-
-      endpoint.delete(id);
-    }
 
     /********************** REDIS WITH OPENAI ****************************/
 
@@ -150,21 +133,15 @@ public class RedisExample {
 
       /**
        * Both IndexName & namespace are integral for upsert & performing similarity search; If you
-       * are creating different namespace; recommended to use different index_name *
+       * are creating different namespace; recommended to use different index_name because filtering is done by index_name *
        */
-      RedisEndpoint redisEndpoint =
-          new RedisEndpoint(indexName, namespace, new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
 
-      OpenAiEndpoint embeddingEndpoint =
-          new OpenAiEndpoint(
-              OPENAI_EMBEDDINGS_API,
-              OPENAI_AUTH_KEY,
-              "text-embedding-ada-002",
-              new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
+      // Configure RedisEndpoint
+      redisEndpoint.setNamespace(namespace);
+      redisEndpoint.setIndexName(indexName);
 
       /**
-       * Currently, the entire file is loaded into memory (later; it will be loaded in buffers); We
-       * have two implementation for Read By Sentence: a) readBySentence(LangType, Your File)
+       * We have two implementation for Read By Sentence: a) readBySentence(LangType, Your File)
        * EdgeChains sdk has predefined support to chunk by sentences w.r.t to 5 languages (english,
        * france, german, italy, dutch....)
        *
@@ -178,7 +155,7 @@ public class RedisExample {
        * provided, then it will emit an error
        */
       Retrieval retrieval =
-          new RedisRetrieval(redisEndpoint, embeddingEndpoint, 1536, RedisDistanceMetric.COSINE);
+          new RedisRetrieval(redisEndpoint, ada002Embedding, 1536, RedisDistanceMetric.COSINE, arkRequest);
       IntStream.range(0, arr.length).parallel().forEach(i -> retrieval.upsert(arr[i]));
     }
 
@@ -198,23 +175,12 @@ public class RedisExample {
       String indexName = arkRequest.getQueryParam("indexName");
       int topK = arkRequest.getIntQueryParam("topK");
 
-      System.out.println(query);
-      System.out.println(topK);
-      System.out.println(indexName);
-      System.out.println(namespace);
-
-      RedisEndpoint redisEndpoint = new RedisEndpoint(indexName, namespace);
-
-      OpenAiEndpoint embeddingEndpoint =
-          new OpenAiEndpoint(
-              OPENAI_EMBEDDINGS_API,
-              OPENAI_AUTH_KEY,
-              "text-embedding-ada-002",
-              new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
+      // Configure RedisEndpoint
+      redisEndpoint.setNamespace(namespace);
+      redisEndpoint.setIndexName(indexName);
 
       return new EdgeChain<>(
-              embeddingEndpoint.getEmbeddings(
-                  query)) // Step 1: Generate embedding using OpenAI for provided input
+              ada002Embedding.embeddings(query,arkRequest)) // Step 1: Generate embedding using OpenAI for provided input
           .transform(
               embeddings ->
                   EdgeChain.fromObservable(redisEndpoint.query(embeddings, topK))
@@ -232,34 +198,15 @@ public class RedisExample {
       String query = arkRequest.getBody().getString("query");
       int topK = arkRequest.getIntQueryParam("topK");
 
-      System.out.println(query);
+      // Configure Redis Endpoint
+      redisEndpoint.setNamespace(namespace);
+      redisEndpoint.setIndexName(indexName);
 
-      RedisEndpoint redisEndpoint = new RedisEndpoint(indexName, namespace);
-
-      OpenAiEndpoint embeddingEndpoint =
-          new OpenAiEndpoint(
-              OPENAI_EMBEDDINGS_API,
-              OPENAI_AUTH_KEY,
-              "text-embedding-ada-002",
-              new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
-
-      OpenAiEndpoint chatEndpoint =
-          new OpenAiEndpoint(
-              OPENAI_CHAT_COMPLETION_API,
-              OPENAI_AUTH_KEY,
-              "gpt-3.5-turbo",
-              "user",
-              0.7,
-              new ExponentialDelay(3, 5, 2, TimeUnit.SECONDS));
-
-      JsonnetLoader loader =
-          new FileJsonnetLoader("R:\\Github\\redis-query.jsonnet")
-              .put("keepMaxTokens", new JsonnetArgs(DataType.BOOLEAN, "true"))
+      queryLoader.put("keepMaxTokens", new JsonnetArgs(DataType.BOOLEAN, "true"))
               .put("maxTokens", new JsonnetArgs(DataType.INTEGER, "4096"));
 
       return new EdgeChain<>(
-              embeddingEndpoint.getEmbeddings(
-                  query)) // Step 1: Generate embedding using OpenAI for provided input
+              ada002Embedding.embeddings(query,arkRequest)) // Step 1: Generate embedding using OpenAI for provided input
           .transform(
               embeddings ->
                   EdgeChain.fromObservable(redisEndpoint.query(embeddings, topK))
@@ -273,7 +220,7 @@ public class RedisExample {
                 while (iterator.hasNext()) {
 
                   String redis = iterator.next().getId();
-                  loader
+                  queryLoader
                       .put("keepContext", new JsonnetArgs(DataType.BOOLEAN, "true"))
                       .put(
                           "context",
@@ -285,8 +232,7 @@ public class RedisExample {
                   // Step 4: Now, pass the prompt to OpenAI ChatCompletion & Add it to the list
                   // which will be returned
                   resp.add(
-                      chatEndpoint
-                          .getChatCompletion(loader.get("prompt"))
+                      gpt3Endpoint.chatCompletion(queryLoader.get("prompt"), "RedisQueryChain", arkRequest)
                           .firstOrError()
                           .blockingGet());
                 }
@@ -306,51 +252,30 @@ public class RedisExample {
       String namespace = arkRequest.getQueryParam("namespace");
       boolean stream = arkRequest.getBooleanHeader("stream");
 
-      System.out.println(contextId);
-      System.out.println(query);
-      System.out.println(namespace);
-      System.out.println(stream);
+      // configure GPT3Endpoint
+       gpt3Endpoint.setStream(stream);
 
-      RedisHistoryContextEndpoint contextEndpoint =
-          new RedisHistoryContextEndpoint(new FixedDelay(3, 3, TimeUnit.SECONDS));
       HistoryContext historyContext =
           EdgeChain.fromObservable(contextEndpoint.get(contextId)).get();
 
       // Step 1: Create JsonnetLoader || Pass Args || Load The File;
-      JsonnetLoader loader = new FileJsonnetLoader("R:\\Github\\pinecone-chat.jsonnet");
-      loader
+          chatLoader
           .put("keepMaxTokens", new JsonnetArgs(DataType.BOOLEAN, "true"))
           .put("maxTokens", new JsonnetArgs(DataType.INTEGER, "4096"))
           .put("query", new JsonnetArgs(DataType.STRING, query))
           .put("keepHistory", new JsonnetArgs(DataType.BOOLEAN, "false"))
           .loadOrReload();
 
-      // Step 2: Create RedisEndpoint for Query, OpenAIEndpoint for Using Embedding & Chat Service
-      RedisEndpoint redisEndpoint =
-          new RedisEndpoint(indexName, namespace, new FixedDelay(3, 3, TimeUnit.SECONDS));
-      OpenAiEndpoint embeddingEndpoint =
-          new OpenAiEndpoint(
-              OPENAI_EMBEDDINGS_API,
-              OPENAI_AUTH_KEY,
-              "text-embedding-ada-002",
-              new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
 
-      OpenAiEndpoint chatEndpoint =
-          new OpenAiEndpoint(
-              OPENAI_CHAT_COMPLETION_API,
-              OPENAI_AUTH_KEY,
-              "gpt-3.5-turbo",
-              "user",
-              0.7,
-              stream,
-              new ExponentialDelay(3, 3, 2, TimeUnit.SECONDS));
+       // Configure Redis
+        redisEndpoint.setIndexName(indexName);
+        redisEndpoint.setNamespace(namespace);
 
       // Extract topK value from JsonnetLoader;
-      int topK = loader.getInt("topK");
+      int topK = chatLoader.getInt("topK");
 
       return new EdgeChain<>(
-              embeddingEndpoint.getEmbeddings(
-                  query)) // Step 1: Generate embedding using OpenAI for provided input
+              ada002Embedding.embeddings(query, arkRequest)) // Step 1: Generate embedding using OpenAI for provided input
           .transform(
               embeddings ->
                   EdgeChain.fromObservable(redisEndpoint.query(embeddings, topK))
@@ -377,7 +302,7 @@ public class RedisExample {
           // JsonnetLoader
           .transform(
               mapper -> {
-                loader
+                chatLoader
                     .put("keepHistory", new JsonnetArgs(DataType.BOOLEAN, "true"))
                     .put(
                         "history",
@@ -392,9 +317,7 @@ public class RedisExample {
                     .loadOrReload(); // Step 5: Pass the Args & Reload Jsonnet
 
                 StringBuilder openAiResponseBuilder = new StringBuilder();
-                return chatEndpoint
-                    .getChatCompletion(
-                        loader.get("prompt")) // Pass the concatenated prompt to JsonnetLoader
+                return gpt3Endpoint.chatCompletion(chatLoader.get("prompt"), "RedisChatChain", arkRequest) // Pass the concatenated prompt to JsonnetLoader
                     /**
                      * Here is the interesting part; So, with ChatCompletion Stream we will have
                      * streaming Therefore, we create a StringBuilder to append the response as we
@@ -453,14 +376,10 @@ public class RedisExample {
           .getArkResponse();
     }
 
-    /** Delete Redis By Pattern Name * */
-    @DeleteMapping("/redis/delete") // /v1/examples/redis/delete?pattern=machine-learning* (Will
-    // delete all the
-    // keys start with machine-learning namespace
-    public void deleteRedis(ArkRequest arkRequest) {
-      String patternName = arkRequest.getQueryParam("pattern");
-      RedisEndpoint redisEndpoint = new RedisEndpoint();
-      redisEndpoint.delete(patternName);
-    }
+
+
+
+
+
   }
 }
